vs code changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.autoSave": "afterDelay",
     "python.linting.enabled": true,
     "git.autofetch": true,
-    "git.enableSmartCommit": true
+    "git.enableSmartCommit": true,
+    "python.linting.lintOnSave": true
 }
